# breast-thermography-project

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  raw2temp.py  run_models.sh  script.sh  seed_global  temp_tag.txt  todosResultados.csv
Resultados/Resultados30ModelosSeedsIndependentes/Vgg16/: Vgg_AUG_CV_DatasetFixedTagTemp_09_01_t0_Frontal.txt  (+209 more)
Resultados/eval_results/: ALL_experiments_per_run.csv  ALL_experiments_summary.csv  DatasetFixedTagTemp_per_run.csv  DatasetFixedTagTemp_summary.csv  DatasetMarcadorMovidoFixo_per_run.csv  DatasetMarcadorMovidoFixo_summary.csv  DatasetOriginal_per_run.csv  DatasetOriginal_summary.csv  DatasetSeg2classes_per_run.csv  DatasetSeg2classes_summary.csv  DatasetSegYolo_per_run.csv  DatasetSegYolo_summary.csv  DatasetSemMarcador_per_run.csv  DatasetSemMarcador_summary.csv  DatasetTagFixedTam_per_run.csv  DatasetTagFixedTam_summary.csv
docker/: entrypoint.sh
include/: imports.py
src/analysis/: __init__.py  eigencam.py  eigencam_prep.py  experiment_comparison.py
src/data/: __init__.py  conversion.py  segmentation_dataset.py
src/models/: Vgg_16.py  alexnet.py  googleLenet.py  resNet_101.py  resNet_152.py  resNet_34.py  resnet50_pre_trained.py  u_net.py  vgg_16_trained.py  yolo_seg.py
src/training/: classification.py  evaluate_all_models.py  evaluation.py  segmentation.py
testes_estatisticos/data/: todosResultados.csv  todosResultados_copy.csv
testes_estatisticos/scripts/: anova.py  common.py  mean_std.py  plot_pairwise.py  teste_normalidade.py
utils/: data_prep.py  stats.py
(+29 files in other folders)
